# ky-ha-oj

./: .dockerignore  .gitignore  API.md  Dockerfile  MONITORING.md  README.md  SECRETS.md  TODO.md  main.py  pyproject.toml
frontend/: package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/e2e/: manual-temp.spec.ts
frontend/src/: App.tsx  Controls.tsx  ThermostatCard.tsx  api.ts  controls.css  index.css  types.ts
k8s/: deployment.yaml  ingress.yaml  prometheus-backup.yaml  secret.yaml  service.yaml  servicemonitor.yaml
ky-ha-oj/: LICENSE
ky-ha-oj/k8s/: secret.yaml  service.yaml  servicemonitor.yaml
scripts/: build.sh  unseal.sh
