[project]
name = "20260312"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "async-timeout>=5.0.1",
    "fastapi>=0.135.1",
    "ojmicroline-thermostat>=3.3.0",
    "prometheus-client>=0.24.1",
    "uvicorn>=0.41.0",
]
